tests/app3/app-ingress-hello.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app3-ingress-tls
  namespace: app3
  annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
   nginx.ingress.kubernetes.io/ssl-redirect: "true"
   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - app3.conectado.local
    secretName: app3-secret
  rules:
  - host: app3.conectado.local
    http:
      paths:
      - backend:
          serviceName: hello-service
          servicePort: 80
        path: /
